# RetentIA

./: .gitignore  Dockerfile  Makefile  README.md  index.html  package-lock.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  cicd.yml
docs/: CRISP_DM.md  DEPLOY.md  ML_CANVAS.md  MODEL_CARD.md  MONITORING.md  feature_importance.csv
models/: mlp_weights.pt  preprocessor.pkl  threshold.pkl  xgboost.pkl
notebooks/: eda.ipynb
retentia-ui/: README.md  index-static.html  index.html  package.json
retentia-ui/src/: App.jsx
retentia_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: feature_importance.py  run_batch.py
src/: main.py  train.py
src/api/: schemas.py
src/cost/: threshold.py
src/data/: ingest.py
src/features/: columns.py  preprocessor.py
src/models/: mlp.py
src/routes/: metrics.py  predict.py
src/services/: model_service.py
src/validation/: schemas.py
tests/: conftest.py  test_health.py  test_metrics.py  test_model.py  test_predict.py  test_schema.py
