[project]
name = "retentia-ai"
version = "0.1.0"
description = "Predict customer churn before it happens."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.30.0",
    "mlflow>=2.15.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "pandera>=0.18.0",
    "pydantic>=2.6.0",
    "prometheus-client>=0.20.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
